<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/aboutView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/about_top_navbar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">


        <ImageView
            android:id="@+id/about_back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/back_arrow_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:fontFamily="@font/inter_semibold"
            android:textColor="?attr/colorSecondary"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/about_back_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/about_top_navbar"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/inter_bold"
            android:textColor="?attr/colorSecondary"
            android:textSize="25sp"
            android:layout_marginVertical="35dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/about_question_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What is Spend Smart?"
            android:fontFamily="@font/inter"
            android:textColor="?attr/colorSecondary"
            android:textSize="15sp"
            android:layout_marginHorizontal="15dp"/>

        <TextView
            android:id="@+id/about_answer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutText1"
            android:fontFamily="@font/inter"
            android:textColor="?attr/colorSecondary"
            android:textSize="15sp"
            android:layout_marginHorizontal="15dp"
            android:justificationMode="inter_word"/>

        <TextView
            android:id="@+id/about_question_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What problem are you trying to address?"
            android:fontFamily="@font/inter"
            android:textColor="?attr/colorSecondary"
            android:textSize="15sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/about_answer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutText2"
            android:fontFamily="@font/inter"
            android:textColor="?attr/colorSecondary"
            android:textSize="15sp"
            android:layout_marginHorizontal="15dp"
            android:justificationMode="inter_word"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>